# cminus-rs

./: .gitignore  Cargo.toml  README.md  spec.md  test.txt
.cargo/: config.toml
.github/workflows/: ci.yml  test.yml
benches/: recursive.rs
benches/corpus/: fibonacci.cm
codespan-drive/: Cargo.toml
codespan-drive/src/: lib.rs
docs/: 0.bootstrap.js  1.bootstrap.js  bootstrap.js  index.html
examples/: c.rs  hash.rs  lexer.rs  vm.rs
proc/: Cargo.toml
proc/src/: lib.rs
site/: bootstrap.js
src/: lib.rs  main.rs
src/error_emit/: error_emit.rs  mod.rs
src/interpreter/: env.rs  interpreter.rs  mod.rs
src/lexer/: lex.rs  lexer.rs  mod.rs  state.rs  token.rs  util.rs
src/macros/: mod.rs  proc.rs  test.rs
src/parser/: ast.rs  error.rs  mod.rs  parse.rs  parser.rs  span.rs  visitor.rs  walk.rs
src/tac/: gen.rs
src/vm/: emit_op.rs  error.rs  function.rs  macro_util.rs  mod.rs  op_code.rs  value.rs  vm.rs
tests/: emit_op.rs  lex_test.rs  vm_calc.rs
tests/fixtures/: lexer.test.txt  lexer2.test.txt  parser.test.txt
tests/fixtures/interpreter/: bubble_sort.txt  fib.txt  insert_sort.txt  test.txt
tests/fixtures/lexer/: test.txt  test2.txt
tests/fixtures/parser/: test.txt
tests/fixtures/vm/: global.cm  local.cm
wasm/: .gitignore  Cargo.toml  LICENSE_MIT  build.sh
wasm/pkg/: package.json  wasm.d.ts  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: lib.rs
wasm/www/: .prettierrc  ast.js  code.js  index.html  index.js  input.js  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
