[package]
authors = ["IWANABETHATGUY <974153916@qq.com>"]
edition = "2018"
name = "tinylang-rs"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# proc-macro = true

[dependencies]
codespan-reporting = "0.11.0"
fxhash = "0.2.1"
hashbrown = "0.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.24"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
harness = false
name = "recursive"

[profile.release]
lto = true
