[package]
authors = ["IWANABETHATGUY <974153916@qq.com>"]
edition = "2018"
name = "tinylang-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
codespan-drive = {path = "./codespan-drive"}
codespan-reporting = "0.9"
enum-as-inner = "0.3.3"
fxhash = "0.2.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
smol_str = {version = "0.1.17", features = ["serde"]}

[target.'cfg(target_arch = "x86_64")'.dependencies]
thiserror = "1.0.24"
anyhow = "=1.0.39"
mimallocator = "0.1.3"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
harness = false
name = "recursive"

[profile.release]
codegen-units = 1
lto = true
